MOLLY-175: Finish fixing broken CSS text sizes

--- a/molly/media/site/css/smart.css
+++ b/molly/media/site/css/smart.css
@@ -166,7 +166,7 @@ ul.content-list a {color: #00f;}
 ul.content-list h3 {
     color:#222;
     text-align:left;
-    font-size:0.8em;
+    font-size:1em;
     padding:0;
     margin-bottom:5px;
 }
